# shc

./: .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  tests.yml
blocks/: __init__.py  attention.py  feedforward.py  shc_block.py
configs/: __init__.py  config.py
data/: __init__.py  dataloader.py  dataset.py
docs/: architecture.md  changelog.md  conf.py  contributing.md  index.md  inference.md  installation.md  make.bat  quickstart.md  requirements.txt  theory.md  training.md
docs/_static/: custom.css
docs/api/: evaluation.md  layers.md  models.md  training.md
evaluation/: __init__.py  benchmarks.py  metrics.py  profiler.py
examples/: basic_usage.py  distillation_example.py  training_example.py
layers/: __init__.py  adaptive_rank.py  base.py  cayley.py  factorized_cache.py  sparse_mixture.py
models/: __init__.py  base.py  embeddings.py  ssm_student.py  transformer.py
scripts/: __init__.py  evaluate.py  train.py
sparse_hyper_connections.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  conftest.py
tests/test_layers/: __init__.py  test_cayley.py  test_sparse_mixture.py
tests/test_models/: __init__.py  test_transformer.py
training/: __init__.py  distillation.py  distributed.py  optimizer.py  trainer.py
