[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shc"
version = "0.1.0"
description = "Sparse Selective Hyper-Connections for stable and efficient deep residual learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "SHC Research Team"}
]
keywords = [
    "deep-learning",
    "transformers",
    "language-models",
    "orthogonal-matrices",
    "residual-connections",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
training = [
    "tensorboard>=2.12.0",
    "deepspeed>=0.9.0",
    "hydra-core>=1.3.0",
]
all = [
    "shc[dev,training]",
]

[project.urls]
Homepage = "https://github.com/your-org/shc"
Documentation = "https://github.com/your-org/shc#readme"
Repository = "https://github.com/your-org/shc"

[tool.setuptools.packages.find]
where = ["."]
include = ["shc*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["shc"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
