[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse-hyper-connections"
version = "0.1.1"
description = "Sparse Selective Hyper-Connections for stable and efficient deep residual learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "SHC Research Team"}
]
maintainers = [
    {name = "SHC Research Team"}
]
keywords = [
    "deep-learning",
    "transformers",
    "language-models",
    "orthogonal-matrices",
    "residual-connections",
    "pytorch",
    "machine-learning",
    "neural-networks",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
training = [
    "tensorboard>=2.12.0",
    "deepspeed>=0.9.0",
    "hydra-core>=1.3.0",
    "wandb>=0.15.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
]
all = [
    "sparse-hyper-connections[dev,training,docs]",
]

[project.scripts]
shc-train = "shc.scripts.train:main"
shc-eval = "shc.scripts.evaluate:main"

[project.urls]
Homepage = "https://github.com/your-org/shc"
Documentation = "https://shc.readthedocs.io"
Repository = "https://github.com/your-org/shc"
Changelog = "https://github.com/your-org/shc/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/your-org/shc/issues"

[tool.setuptools]
include-package-data = true
packages = [
    "shc",
    "shc.blocks",
    "shc.configs",
    "shc.data",
    "shc.evaluation",
    "shc.layers",
    "shc.models",
    "shc.scripts",
    "shc.training",
]
package-dir = {"shc" = "."}

[tool.setuptools.package-data]
shc = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "gpu: marks tests requiring GPU",
]

[tool.coverage.run]
source = ["shc"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["shc"]
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = false
